tests/semantic/valid/type_compatibility.src
fn main() -> int {
    int a = 5;
    float b = 3.14;
    bool c = true;
    
    b = a;
    
    float d = a + b;
    
    if (a) {
        a = 10;
    }
    
    if (a < b) {
        a = 1;
    }
    
    return 0;
}
